добавлена информация о работе с git

--- a/123.md
+++ b/123.md
@@ -1,4 +1,61 @@
+# Введение в контроль версий
 
+Git - это консольная утилита, для отслеживания и ведения истории изменения файлов,
+
+С помощью Git-a вы можете откатить свой проект до более старой версии, сравнивать, анализировать или сливать свои изменения в репозиторий.
+
+*Репозиторием* называют хранилище вашего кода и историю его изменений
+
+[GitHub: Let's build from here](https://github.com/)
+
+Знакомство с контролем версий git
+
+Настройка, основные комманды.
+
+git —version: вывод версии гита на экране.
+
+git init - инициализация гита в папке(начало отслеживания всех изменений)
+
+git status - указывает текущий  статус файла
+
+git add - добавляет файл к отслеживанию
+
+git commit -m”сообщение”
+
+git log - журнал событий
+
+git checkout - просмотр разных версий файла
+
+git checkout master - просмотр актуальной версии
+
+git diff - разница между файлами
+
+- 
+
+**markdown** - язык разметки сайтов
+
+Выделение языка курсивом: **какуля**
+
+полужирный  **Полужирный**
+
+- 
+
+## 
+
+- Установка и настройка системы контроля версий
+    
+    Ветви в гите - это система “черновик - чистовик”
+    
+    git branch - показывает в какой ветке находишься, выводит список веток в репозитории.
+    
+    git branch название_ветки
+    
+    git branch -d удалить_ветку
+    
+    git log —graph - выводим список коммитов
+    
+    git merge - слияние веток
+    
 #Начало работы
 1. Для начала работы необходимо скачать и устоновить программу git и VS Studio
 2. Создать папку на рабочим столе отокрыть её в VS Studio и открыть терминал
